@startuml
class UserPreLoginEvent {
}
class LoginArgs {
    + LoginArgs(user:IUser, phase:LoginPhase)
}
enum LoginPhase {
    Request,
    Response,
    Success,
}
class "PubSubEvent`1"<T> {
}
"PubSubEvent`1" "<LoginArgs>" <|-- UserPreLoginEvent
LoginArgs --> "User" IUser
LoginArgs --> "Phase" LoginPhase
@enduml
